## Process this file with automake to produce Makefile.in
## Copyright (c) 2026 Fredrick Meunier

## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License along
## with this program; if not, write to the Free Software Foundation, Inc.,
## 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

if UI_SDL2

fuse_SOURCES += $(ui_sdl2_files)

endif

ui_sdl2_files = \
                ui/sdl2/sdl2_display_internal.c \
                ui/sdl2/sdl2_display_internal.h \
                ui/sdl2/sdl2_display.c \
                ui/sdl2/sdl2_display.h \
                ui/sdl2/sdl2_joystick_internal.c \
                ui/sdl2/sdl2_joystick_internal.h \
                ui/sdl2/sdl2_joystick.c \
                ui/sdl2/sdl2_joystick.h \
                ui/sdl2/sdl2_keyboard.c \
                ui/sdl2/sdl2_keyboard.h \
                ui/sdl2/sdl2_mouse_internal.c \
                ui/sdl2/sdl2_mouse_internal.h \
                ui/sdl2/sdl2_ui.c
